CMAKE_MINIMUM_REQUIRED(VERSION 3.12)


PROJECT(thread_pool_test C CXX)
SET(PROJECT_SOURCE_DIR "/home/twt/Desktop/LittleServer")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/threadpool SRC_LIST)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/lock AUX_LIST)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lock)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/threadpool)
INCLUDE_DIRECTORIES(include)
message("PROJECT_DIR:${PROJECT_SOURCE_DIR}")
message("src list:${SRC_LIST} ${AUX_LIST}")


add_executable(test ${SRC_LIST} ${AUX_LIST})
target_link_libraries(test pthread)